--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -140,17 +140,30 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Device\Device.cs" />
     <Compile Include="Models\Device\Devices.cs" />
     <Compile Include="Models\Device\DeviceService.cs" />
+    <Compile Include="Models\Device\NewDevice.cs" />
     <Compile Include="Models\Device\OleDevices.cs" />
     <Compile Include="Models\Forms.cs" />
+    <Compile Include="Models\MeetingPlace\MeetingPlace.cs" />
     <Compile Include="Models\MeetingPlace\MeetingPlaceService.cs" />
     <Compile Include="Models\MeetingPlace\NewMeetingPlace.cs" />
     <Compile Include="Models\MeetingPlace\MeetingPlaces.cs" />
     <Compile Include="Models\MeetingPlace\OldMeetingPlaces.cs" />
+    <Compile Include="Models\Meeting\Meeting.cs" />
+    <Compile Include="Models\Meeting\Meetings.cs" />
+    <Compile Include="Models\Meeting\MeetingService.cs" />
+    <Compile Include="Models\Meeting\NewMeeting.cs" />
+    <Compile Include="Models\Meeting\OldMeetings.cs" />
     <Compile Include="Models\RBACUser.cs" />
     <Compile Include="Models\RespondModel.cs" />
     <Compile Include="Models\Tools\JsonHelper.cs" />
+    <Compile Include="Models\User\NewUser.cs" />
+    <Compile Include="Models\User\OldUsers.cs" />
+    <Compile Include="Models\User\User.cs" />
+    <Compile Include="Models\User\Users.cs" />
+    <Compile Include="Models\User\UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -3255,9 +3268,7 @@
     <Folder Include="Models\Agenda\" />
     <Folder Include="Models\Delegate\" />
     <Folder Include="Models\Document\" />
-    <Folder Include="Models\Meeting\" />
     <Folder Include="Models\Role\" />
-    <Folder Include="Models\User\" />
     <Folder Include="Models\Vote\" />
     <Folder Include="Views\Agenda\" />
     <Folder Include="Views\Delegate\" />
