--- a/WebServer/Web.config
+++ b/WebServer/Web.config
@@ -9,9 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
   </configSections>
+  
+  
   <connectionStrings>
     <add name="DefaultConnection" providerName="microsoft.jet.oledb.4.0;" connectionString="D:\c#_workspace\publish\DataBase\Database.mdb;" />
   </connectionStrings>
+  
+  
+  
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -19,12 +24,55 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <!--邮箱设置-->
+  <!--<system.net>
+    <mailSettings>
+      <smtp deliveryMethod="PickupDirectoryFromIis">
+        <network defaultCredentials="true" host="stmp.qq.com:465"/>
+      </smtp>
+    </mailSettings>
+  </system.net>-->
+  
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
+    
+    
     <authentication mode="Forms">
-      <forms name="LoginCookie" loginUrl="/Account/Login" defaultUrl="/Account/Login" protection="All" timeout="30" path="/" requireSSL="false" slidingExpiration="false" enableCrossAppRedirects="false" cookieless="UseDeviceProfile" domain="" />
+      <forms name="LoginCookie" loginUrl="/Account/Index" defaultUrl="/Account/Index" protection="All" timeout="30" path="/" requireSSL="false" slidingExpiration="false" enableCrossAppRedirects="false" cookieless="UseDeviceProfile" domain="" />
     </authentication>
+
+    <!--健康监视-->
+    <!--<healthMonitoring enabled="true">
+      <eventMappings>
+        <clear />
+        <add name="CustomException" type="System.Web.Management.WebApplicationLifetimeEvent" />
+        <add name="AnotherException" type="System.Web.Management.WebRequestErrorEvent" />
+      </eventMappings>
+
+      <providers>
+        <clear />
+        <add name="EmailProvider" type="System.Web.Management.SimpleMailEventProvider" />
+        <add name="SqlProvider" type="System.Web.Management.WebRequestErrorEvent" />
+      </providers>
+      
+      <rules>
+        <clear/>
+        <add name="myRule1"
+             eventName="CustomException"
+             provider="EmailProvider"
+             profile="Default"
+             minInstances="1"
+             maxLimit="Infinite"
+             minInterval="00:00:00"
+             />
+      </rules>
+      <profiles>..</profiles>
+      <bufferModes>..</bufferModes>
+    </healthMonitoring>-->
+    
+    
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
