--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Controllers\DelegateController.cs" />
     <Compile Include="Controllers\DeviceController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\MeetingController.cs" />
     <Compile Include="Controllers\MeetingPlaceController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
@@ -144,20 +145,30 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Delegate\CreateDelegate.cs" />
+    <Compile Include="Models\Delegate\Delegate.cs" />
+    <Compile Include="Models\Delegate\DelegateService.cs" />
+    <Compile Include="Models\Delegate\DeleteDelegate.cs" />
+    <Compile Include="Models\Delegate\UpdateDelegate.cs" />
+    <Compile Include="Models\Device\DeviceForDelegate.cs" />
     <Compile Include="Models\Device\Device.cs" />
     <Compile Include="Models\Device\DeviceService.cs" />
     <Compile Include="Models\Account\Forms.cs" />
     <Compile Include="Models\Device\UpdateDevice.cs" />
+    <Compile Include="Models\MeetingPlace\MeetingPlaceForMeeting.cs" />
+    <Compile Include="Models\Role\CreateRole.cs" />
+    <Compile Include="Models\Role\Permission.cs" />
+    <Compile Include="Models\Role\Role.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Models\MeetingPlace\MeetingPlace.cs" />
     <Compile Include="Models\MeetingPlace\MeetingPlaceService.cs" />
     <Compile Include="Models\MeetingPlace\CreateMeetingPlace.cs" />
     <Compile Include="Models\MeetingPlace\UpdateMeetingPlace.cs" />
     <Compile Include="Models\Meeting\Meeting.cs" />
-    <Compile Include="Models\Meeting\Meetings.cs" />
+    <Compile Include="Models\Meeting\TipMeeting.cs" />
     <Compile Include="Models\Meeting\MeetingService.cs" />
-    <Compile Include="Models\Meeting\NewMeeting.cs" />
-    <Compile Include="Models\Meeting\OldMeetings.cs" />
+    <Compile Include="Models\Meeting\CreateMeeting.cs" />
+    <Compile Include="Models\Meeting\UpdateMeeting.cs" />
     <Compile Include="Models\Account\RBACUser.cs" />
     <Compile Include="Models\RespondModel.cs" />
     <Compile Include="Models\Role\RoleForUser.cs" />
@@ -166,6 +177,7 @@
     <Compile Include="Models\User\CreateUser.cs" />
     <Compile Include="Models\User\UpdateUser.cs" />
     <Compile Include="Models\User\User.cs" />
+    <Compile Include="Models\User\UserForDelegate.cs" />
     <Compile Include="Models\User\UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -227,9 +239,10 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="js\editpeople_role.js" />
-    <Content Include="js\people_role.js" />
+    <Content Include="js\index.js" />
     <Content Include="js\addpeople_role.js" />
-    <Content Include="less\index.less" />
+    <Content Include="js\meetingplace.js" />
+    <Content Include="js\peopleAndrole.js" />
     <Content Include="node_modules\.0.0.0%40prr\.jshintrc" />
     <Content Include="node_modules\.0.0.0%40prr\.npmignore" />
     <Content Include="node_modules\.0.0.0%40prr\.npminstall.done" />
@@ -1569,9 +1582,11 @@
     <Content Include="node_modules\source-map\package.json" />
     <Content Include="node_modules\source-map\README.md" />
     <Content Include="package.json" />
-    <Content Include="less\people_role.less" />
     <Content Include="less\editpeople_role.less" />
     <Content Include="less\addpeople_role.less" />
+    <Content Include="less\index.less" />
+    <Content Include="less\peopleAndrole.less" />
+    <Content Include="less\meetingplace.less" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="images\01120.png" />
     <Content Include="images\03120.png" />
@@ -1632,7 +1647,6 @@
     <Content Include="images\u998.png" />
     <Content Include="images\u999.png" />
     <Content Include="images\zxtx.png" />
-    <Content Include="js\index.js" />
     <Content Include="node_modules\.0.0.0%40prr\prr.js" />
     <Content Include="node_modules\.0.0.0%40prr\test.js" />
     <Content Include="node_modules\.0.0.8%40minimist\example\parse.js" />
@@ -3270,21 +3284,21 @@
     <Content Include="Views\Account\Admin.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Account\Organizor.cshtml" />
-    <Content Include="Views\User\Index.cshtml" />
-    <Content Include="Views\User\Edit.cshtml" />
-    <Content Include="Views\User\Add.cshtml" />
+    <Content Include="Views\User\Index_admin.cshtml" />
+    <Content Include="Views\User\Edit_admin.cshtml" />
+    <Content Include="Views\User\Add_admin.cshtml" />
+    <Content Include="Views\MeetingPlace\Index_admin.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\Agenda\" />
-    <Folder Include="Models\Delegate\" />
     <Folder Include="Models\Document\" />
     <Folder Include="Models\Vote\" />
     <Folder Include="Views\Agenda\" />
     <Folder Include="Views\Delegate\" />
     <Folder Include="Views\Device\" />
     <Folder Include="Views\Document\" />
-    <Folder Include="Views\MeetingPlace\" />
     <Folder Include="Views\Meeting\" />
     <Folder Include="Views\Role\" />
     <Folder Include="Views\Vote\" />
