--- a/WebServer/Web.config
+++ b/WebServer/Web.config
@@ -12,12 +12,17 @@
   
   
   <connectionStrings>
-    <add name="DefaultConnection" providerName="microsoft.jet.oledb.4.0;" connectionString="D:\c#_workspace\publish\DataBase\Database.mdb;" />
+    <!--如果修改数据库，需修改DBConnString的connectionString、providerName，并修改数据库类型DBTYPE-->
+    <add name="DBConnString" providerName="microsoft.jet.oledb.4.0;" connectionString="provider = microsoft.jet.oledb.4.0; data source = D:\c#_workspace\publish\DataBase\database.mdb;" />
+    <!--<add name="DBConnString" connectionString="Data Source=127.0.0.1;User ID=root;Password=mysql.5g5a5n;DataBase=testdal;Charset=gb2312;" providerName="MySql.Data.MySqlClient" />-->
+    <add name="DBConnectionString" providerName="microsoft.jet.oledb.4.0;" connectionString="D:\c#_workspace\publish\DataBase\Database.mdb;" />
   </connectionStrings>
   
   
   
   <appSettings>
+    <add key="DBTYPE" value="0" />
+    <!--数据库类型：access：0，mysql：1-->
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
