--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -255,11 +255,10 @@
     <Content Include="js\device\index.js" />
     <Content Include="js\meetingPlace\edit.js" />
     <Content Include="js\user\edit.js" />
-    <Content Include="js\index.js" />
     <Content Include="js\user\add.js" />
     <Content Include="js\meetingPlace\index.js" />
     <Content Include="js\user\index.js" />
-    <Content Include="js\role\role.js" />
+    <Content Include="js\role\index.js" />
     <Content Include="node_modules\.0.0.0%40prr\.jshintrc" />
     <Content Include="node_modules\.0.0.0%40prr\.npmignore" />
     <Content Include="node_modules\.0.0.0%40prr\.npminstall.done" />
