--- a/WebServer/Web.config
+++ b/WebServer/Web.config
@@ -8,8 +8,35 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
+    <!--//配置日志 log4net-->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
   </configSections>
-  
+
+  <log4net>
+    <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
+    <!-- Set root logger level to ERROR and its appenders -->
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="SysAppender"/>
+    </root>
+
+    <!-- Print only messages of level DEBUG or above in the packages -->
+    <logger name="WebLogger">
+      <level value="ALL"/>
+    </logger>
+    <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net" >
+      <param name="File" value="Logger/" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
+      <param name="StaticLogFileName" value="false" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="Header" value="&#13;&#10;----------------------header--------------------------&#13;&#10;" />
+        <param name="Footer" value="&#13;&#10;----------------------footer--------------------------&#13;&#10;" />
+      </layout>
+    </appender>
+  </log4net>
   
   <connectionStrings>
     <!--如果修改数据库，需修改DBConnString的connectionString、providerName，并修改数据库类型DBTYPE-->
@@ -17,8 +44,6 @@
     <!--<add name="DBConnString" connectionString="Data Source=127.0.0.1;User ID=root;Password=mysql.5g5a5n;DataBase=testdal;Charset=gb2312;" providerName="MySql.Data.MySqlClient" />-->
     <add name="DBConnectionString" providerName="microsoft.jet.oledb.4.0;" connectionString="D:\c#_workspace\publish\DataBase\Database.mdb;" />
   </connectionStrings>
-  
-  
   
   <appSettings>
     <add key="DBTYPE" value="0" />
@@ -29,15 +54,6 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-
-  <!--邮箱设置-->
-  <!--<system.net>
-    <mailSettings>
-      <smtp deliveryMethod="PickupDirectoryFromIis">
-        <network defaultCredentials="true" host="stmp.qq.com:465"/>
-      </smtp>
-    </mailSettings>
-  </system.net>-->
   
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -47,36 +63,6 @@
     <authentication mode="Forms">
       <forms name="LoginCookie" loginUrl="/Account/Index" defaultUrl="/Account/Index" protection="All" timeout="30" path="/" requireSSL="false" slidingExpiration="false" enableCrossAppRedirects="false" cookieless="UseDeviceProfile" domain="" />
     </authentication>
-
-    <!--健康监视-->
-    <!--<healthMonitoring enabled="true">
-      <eventMappings>
-        <clear />
-        <add name="CustomException" type="System.Web.Management.WebApplicationLifetimeEvent" />
-        <add name="AnotherException" type="System.Web.Management.WebRequestErrorEvent" />
-      </eventMappings>
-
-      <providers>
-        <clear />
-        <add name="EmailProvider" type="System.Web.Management.SimpleMailEventProvider" />
-        <add name="SqlProvider" type="System.Web.Management.WebRequestErrorEvent" />
-      </providers>
-      
-      <rules>
-        <clear/>
-        <add name="myRule1"
-             eventName="CustomException"
-             provider="EmailProvider"
-             profile="Default"
-             minInstances="1"
-             maxLimit="Infinite"
-             minInterval="00:00:00"
-             />
-      </rules>
-      <profiles>..</profiles>
-      <bufferModes>..</bufferModes>
-    </healthMonitoring>-->
-    
     
     <pages>
       <namespaces>
@@ -116,6 +102,7 @@
         
       </providers>
     </sessionState>
+    <!--支持less-->
     <httpHandlers>
       <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
     </httpHandlers>
