--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -43,6 +43,10 @@
       <HintPath>..\packages\dotless.1.5.2\lib\dotless.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -128,6 +132,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\Log.cs" />
     <Compile Include="App_Start\RBACAttribute.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -161,6 +166,7 @@
     <Compile Include="Models\Device\UpdateDevice.cs" />
     <Compile Include="Models\Document\Document.cs" />
     <Compile Include="Models\Document\DocumentService.cs" />
+    <Compile Include="Models\Excel\Excel.cs" />
     <Compile Include="Models\MeetingPlace\MeetingPlaceForMeeting.cs" />
     <Compile Include="Models\Organizor.cs" />
     <Compile Include="Models\Role\CreateRole.cs" />
@@ -188,6 +194,8 @@
     <Compile Include="Models\User\User.cs" />
     <Compile Include="Models\User\UserForDelegate.cs" />
     <Compile Include="Models\User\UserService.cs" />
+    <Compile Include="Models\Vote\CreateVote.cs" />
+    <Compile Include="Models\Vote\UpdateVote.cs" />
     <Compile Include="Models\Vote\Vote.cs" />
     <Compile Include="Models\Vote\VoteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -3339,6 +3347,24 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
