--- a/WebServer/Web.config
+++ b/WebServer/Web.config
@@ -48,6 +48,8 @@
   <appSettings>
     <add key="DBTYPE" value="1" />
     <!--数据库类型：access：0，mysql：1-->
+    <!--文件存储根目录：apiServer根目录-->
+    <add key="rootPath" value="D:\c#_workspace\APIServer\APIServer"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
