--- a/WebServer/Web.config
+++ b/WebServer/Web.config
@@ -23,9 +23,10 @@
     <!-- Print only messages of level DEBUG or above in the packages -->
     <logger name="WebLogger">
       <level value="ALL"/>
+      <appender-ref ref="SysAppender"/>
     </logger>
     <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net" >
-      <param name="File" value="Logger/" />
+      <param name="File" value="Logger/WebServer/" />
       <param name="AppendToFile" value="true" />
       <param name="RollingStyle" value="Date" />
       <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
@@ -49,7 +50,7 @@
     <add key="DBTYPE" value="1" />
     <!--数据库类型：access：0，mysql：1-->
     <!--文件存储根目录：apiServer根目录-->
-    <add key="rootPath" value="D:\c#_workspace\APIServer\APIServer"/>
+    <add key="APIServerRootPath" value="D:\c#_workspace\APIServer\APIServer"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
@@ -58,6 +59,8 @@
   </appSettings>
   
   <system.web>
+    <!--设置编码，解决中文乱码问题-->
+    <globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="zh-CN" fileEncoding="utf-8" />
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     
